--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
         "drupal/core-composer-scaffold": "^10.3",
         "drupal/core-project-message": "^10.3",
         "drupal/core-recommended": "^10.3",
+        "drupal/devel": "^5.3",
+        "drupal/readmore": "^2.0@alpha",
         "drush/drush": "^12.5"
     },
     "conflict": {
