--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -7,6 +7,7 @@ module:
   block: 0
   block_content: 0
   breakpoint: 0
+  buy_product: 0
   ckeditor5: 0
   comment: 0
   config: 0
@@ -14,8 +15,11 @@ module:
   contextual: 0
   datetime: 0
   dblog: 0
+  devel: 0
+  devel_generate: 0
   dynamic_page_cache: 0
   editor: 0
+  events_api_data: 0
   field: 0
   field_ui: 0
   file: 0
@@ -32,6 +36,7 @@ module:
   page_cache: 0
   path: 0
   path_alias: 0
+  readmore: 0
   search: 0
   shortcut: 0
   system: 0
