--- a/config/sync/user.role.content_editor.yml
+++ b/config/sync/user.role.content_editor.yml
@@ -3,45 +3,36 @@ langcode: en
 status: true
 dependencies:
   config:
-    - node.type.article
-    - node.type.page
-    - taxonomy.vocabulary.tags
+    - node.type.product
   module:
     - comment
     - contextual
     - file
     - node
-    - path
     - system
-    - taxonomy
     - toolbar
 _core:
   default_config_hash: e_wG1u7SrGaJbY2-Szgbgl-c8T3kdirU3uTNq2c_QJQ
 id: content_editor
-label: 'Content editor'
+label: 'Content admin'
 weight: 2
 is_admin: false
 permissions:
   - 'access administration pages'
   - 'access content overview'
   - 'access contextual links'
-  - 'access files overview'
   - 'access toolbar'
-  - 'administer url aliases'
-  - 'create article content'
-  - 'create page content'
-  - 'create terms in tags'
-  - 'create url aliases'
-  - 'delete article revisions'
-  - 'delete own article content'
+  - 'create product content'
+  - 'delete any product content'
   - 'delete own files'
-  - 'delete own page content'
-  - 'delete page revisions'
-  - 'edit own article content'
+  - 'delete own product content'
+  - 'delete product revisions'
+  - 'edit any product content'
   - 'edit own comments'
-  - 'edit own page content'
-  - 'edit terms in tags'
+  - 'edit own product content'
   - 'revert all revisions'
+  - 'revert product revisions'
   - 'view all revisions'
   - 'view own unpublished content'
+  - 'view product revisions'
   - 'view the administration theme'
