--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,13 @@
     ],
     "require": {
         "composer/installers": "^2.0",
+        "drupal/commerce": "^2.40",
+        "drupal/commerce_cart_redirection": "^3.3",
         "drupal/core-composer-scaffold": "^10.3",
         "drupal/core-project-message": "^10.3",
         "drupal/core-recommended": "^10.3",
         "drupal/devel": "^5.3",
+        "drupal/inline_entity_form": "^3.0@RC",
         "drupal/readmore": "^2.0@alpha",
         "drush/drush": "^12.5"
     },
