--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -1,24 +1,37 @@
 _core:
   default_config_hash: 4GIX5Esnc_umpXUBj4IIocRX7Mt5fPhm4AgXfE3E56E
 module:
+  address: 0
   announcements_feed: 0
   automated_cron: 0
   big_pipe: 0
   block: 0
   block_content: 0
   breakpoint: 0
-  buy_product: 0
   ckeditor5: 0
   comment: 0
+  commerce: 0
+  commerce_cart: 0
+  commerce_cart_redirection: 0
+  commerce_checkout: 0
+  commerce_log: 0
+  commerce_number_pattern: 0
+  commerce_order: 0
+  commerce_price: 0
+  commerce_product: 0
+  commerce_store: 0
   config: 0
   contact: 0
   contextual: 0
+  custom_cart: 0
   datetime: 0
   dblog: 0
   devel: 0
   devel_generate: 0
   dynamic_page_cache: 0
   editor: 0
+  entity: 0
+  entity_reference_revisions: 0
   events_api_data: 0
   field: 0
   field_ui: 0
@@ -27,6 +40,7 @@ module:
   help: 0
   history: 0
   image: 0
+  inline_entity_form: 0
   link: 0
   menu_link_content: 0
   menu_ui: 0
@@ -36,12 +50,16 @@ module:
   page_cache: 0
   path: 0
   path_alias: 0
+  product_custom: 0
+  profile: 0
   readmore: 0
   search: 0
   shortcut: 0
+  state_machine: 0
   system: 0
   taxonomy: 0
   text: 0
+  token: 0
   toolbar: 0
   update: 0
   user: 0
